Fixed text overlap

--- a/Ouwehandsdierenpark/style.css
+++ b/Ouwehandsdierenpark/style.css
@@ -14,7 +14,7 @@ h1 span {
     background-color: lightgreen;
 }
 
-.dierenparkFoto{
+#dierenparkFoto{
     max-width: 100%;
 }
 
